--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
 		"build": "rimraf dist && tsc",
 		"watch": "rimraf dist && tsc -w",
 		"start": "node dist/index",
-		"test": "jest"
+		"test": "jest",
+		"protoc": "grpc_tools_node_protoc --ts_proto_out=./src/proto --ts_proto_opt=outputServices=nice-grpc,outputServices=generic-definitions,useExactTypes=false --proto_path=./proto ./proto/chronicle.proto"
 	},
 	"dependencies": {
 		"@baileyherbert/container": "^2.0.3",
+		"@grpc/grpc-js": "^1.8.0",
 		"dockerode": "^3.3.4",
+		"long": "^5.2.1",
+		"nice-grpc": "^2.0.1",
+		"protobufjs": "^7.1.2",
+		"rxjs": "^7.6.0",
 		"source-map-support": "^0.5.0"
 	},
 	"devDependencies": {
@@ -19,10 +25,12 @@
 		"@typescript-eslint/eslint-plugin": "^5.46.0",
 		"@typescript-eslint/parser": "^5.46.0",
 		"eslint": "^8.29.0",
+		"grpc-tools": "^1.12.3",
 		"jest": "^28.1.3",
 		"rimraf": "^3.0.2",
 		"ts-jest": "^28.0.7",
 		"ts-node-dev": "^2.0.0",
+		"ts-proto": "^1.135.2",
 		"typescript": "^4.7.4"
 	},
 	"jest": {
