--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 		"downlevelIteration": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
 		"resolveJsonModule": true,
 
 		"alwaysStrict": true,
