Improved application architecture; fix gitignore mistake

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@baileyherbert/env": "^2.1.0",
 		"@baileyherbert/logging": "^2.1.0",
 		"@grpc/grpc-js": "^1.8.0",
+		"abort-controller-x": "^0.4.1",
 		"dockerode": "^3.3.4",
 		"ix": "^5.0.0",
 		"long": "^5.2.1",
